--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 
 android/MeditationRetreatTimer/app/release/
 ios/Impermanence/Impermanence.xcodeproj/project.xcworkspace/xcuserdata/alex.xcuserdatad/UserInterfaceState.xcuserstate
+ios/Impermanence/Impermanence.xcodeproj/xcuserdata/
+ios/Impermanence/Impermanence.xcodeproj/project.xcworkspace/xcuserdata/
