--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
 
 
     <application
-        android:name="com.impermanence.impermanence.ImpermanenceApplication"
+        android:name=".ImpermanenceApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Impermanence">
         <activity
-            android:name="com.impermanence.impermanence.MainActivity"
+            android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.Impermanence">
             <intent-filter>
@@ -25,7 +25,7 @@
             </intent-filter>
         </activity>
         <service
-            android:name="com.impermanence.impermanence.service.DayTimerService"
+            android:name=".service.DayTimerService"
             android:exported="false"
             android:foregroundServiceType="mediaPlayback" />
     </application>
