--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -28,6 +28,13 @@
             android:name=".service.DayTimerService"
             android:exported="false"
             android:foregroundServiceType="mediaPlayback" />
+        <service
+            android:name=".service.QuickSitBellService"
+            android:exported="false"
+            android:foregroundServiceType="mediaPlayback" />
+        <receiver
+            android:name=".service.QuickSitAlarmReceiver"
+            android:exported="false" />
     </application>
 
 </manifest>
